chore: remove yed from skeleton chore: upgrade to swingbridge 1.1.0 and Vaadin 25.1.0