@@ -9,8 +9,8 @@
     
     <properties>
         <maven.compiler.source>21</maven.compiler.source>
-        <vaadin.version>25.1.0-beta1</vaadin.version>
-        <swing-bridge.version>1.1-SNAPSHOT</swing-bridge.version>
+        <vaadin.version>25.1.0</vaadin.version>
+        <swing-bridge.version>1.1.0</swing-bridge.version>
         <swing-bridge.path>${settings.localRepository}/com/vaadin</swing-bridge.path>
     </properties>
     
@@ -105,6 +105,7 @@
                         --add-exports=java.desktop/sun.font=ALL-UNNAMED
                         --add-exports=java.desktop/sun.awt=ALL-UNNAMED
                         --add-exports=java.desktop/sun.awt.dnd=ALL-UNNAMED
+                        --add-exports=java.desktop/sun.awt.dnd.peer=ALL-UNNAMED
                         --add-exports=java.base/sun.nio.cs=ALL-UNNAMED
                         --add-exports=java.desktop/sun.java2d=ALL-UNNAMED
                         --add-exports=java.desktop/sun.java2d.pipe=ALL-UNNAMED
@@ -117,6 +118,7 @@
                         --add-exports=java.desktop/sun.swing=ALL-UNNAMED
                         --add-opens=java.desktop/java.awt.event=ALL-UNNAMED
                         --add-opens=java.desktop/sun.awt=ALL-UNNAMED
+                        --add-opens=java.desktop/java.awt.dnd=ALL-UNNAMED
                         -agentlib:jdwp=transport=dt_socket,server=y,suspend=n,address=*:5005
                     </jvmArguments>
 
